trunk/plugins/themes/collaboratorium-theme/docroot/_diffs/css/moth_additional_styles.css
/*
 * Copyright (c) 2010. M.I.T. All Rights Reserved
 * Licensed under the MIT license. Please see http://www.opensource.org/licenses/mit-license.php
 * or the license.txt file included in this distribution for the full text of the license.
 */

.custom-3-column table td {
    vertical-align: top;
}


.lrContentPlaceholder {
}

blockquote, ul, ol, dl {
    margin: auto;
}

.custom-3-column .lfr-grid,
.custom-2-column .lfr-grid
{

}

#layout-grid {
    
}

.customLayoutTpl {
    background: #ffffff;
    border: 10px solid #E3DFD7;
    border-bottom: 0;
}


#content_home_other { width:976px; background:#fff; line-height:22px; }

#earth {
	min-width: 992px;
}

/****
 STYLES ADDED AT 20 X 2010 when working on new pages sent by MOTH
 ****/
 
 
#login #signin { background:url(../images/header_btn-signin.png) no-repeat; margin-right:5px;}
#login #reg { background:url(../images/header_btn-reg.png) no-repeat;}
#login #signin a, #login #reg a {display:inline-block; padding-top:6px; font-family: "gloriola-web-1","gloriola-web-2"; font-size:14px; font-style:normal; font-weight:900; color:#fff;}  /* Gloriola std - regular */
#login #signin a:hover, #login #reg a:hover { font-family: "gloriola-web-1","gloriola-web-2"; font-size:14px; font-style:normal; font-weight:900; color:#000;}  /* Gloriola std - regular */


.clear {
    clear: both;
    height: 0px;
}

.clearfix {
	height: 0px;
    clear: both;
}

#loginContainer {
    position: relative;
}

#loginStatus {
    position: absolute;
    top: 59px;
    left: 160px;
    font-size: 14px;
}


.community #content_shade,
.news #content_shade,
.discussion #content_shade,
.members #content_shade,
.resources #content_shade,
.loginregister #content_shade,
.feedback #content_shade,
.loginregistertocolab #content_shade
 { width:984px; background:url(../images/content_shade.png);}

.community #content_home,
.news #content_home,
.discussion #content_home,
.members #content_home,
.resources #content_home,
.loginregister #content_home,
.feedback #content_home,
.loginregistertocolab #content_home
 { width:976px; background:#F9F9F8; line-height:22px; }
 
.community.contentContainer,
.news.contentContainer,
.discussion.contentContainer,
.members.contentContainer,
.resources.contentContainer,
.loginregister.contentContainer,
.feedback.contentContainer,
.loginregistertocolab.contentContainer
 { margin-top: 30px;}
 
 .contentContainer.home {
    margin-top: 0px;
    line-height: normal;
 }
 
 h1 .page-actions span {
    font-size: 11px;
 }
 
 /*
.proposals h2 { font-family: "gloriola-web-1","gloriola-web-2"; font-size:20px; font-style:normal; font-weight:400; color: #58534A; margin:20px 0 10px 0;}
.proposals h1 { font-family: "gloriola-display-thin-1","gloriola-display-thin-2"; font-size:27px; font-style:normal; font-weight:400; color: #58534a;}

.proposals h3 { font-family: "gloriola-web-1","gloriola-web-2"; font-size:18px; font-style:normal; font-weight:400; color: #218aad; margin:10px 0 7px 0;}
.proposals h4 { margin:7px 0 5px 0;}
.proposals h5 { font-family: "gloriola-web-1","gloriola-web-2"; font-size:15px; font-style:normal; font-weight:400; margin:0 0 7px 0;}
*/



/**** FROM OLD STYLE.CSS ****/


.inlineHelp {
    border: 1px solid #cfc8b1;
    background: #ffffdb;
    padding: 10px;
    font-size:10pt;
    color: #858572;
    margin:10px 40px;

}


.basicTable, .taglib-search-iterator  {
    border:0 none;
    border-collapse:collapse;
    width:100%;
}



.basicTable th, .taglib-search-iterator th {

    padding:5px;
    border-right: 1px solid #efefef;
    vertical-align:bottom;
    font-weight: normal;
    font-size: 1.1em;
    background: #E3DFD7;
    text-align: center;

}

.basicTable th a {
   color:#000000;

}

.basicTable th a:hover {
   color:#000000;

}

.basicTable .iceDatTblRow td, .taglib-search-iterator .results-row td {
    border: 1px solid #ffffff;
    padding: 8px;
    text-align: center;
}




.basicTable .odd td, .taglib-search-iterator .results-row td {
    background: #EDEBEA;
}

.basicTable .even td,  .taglib-search-iterator .results-row.alt td {
    background: #dedcdb;
}
.basicTable th table {
    margin: auto;
}

.basicTable th .iceOutTxt {
    padding: 0;
}


input[type="submit"].prominantButton-dis {
    background: #E3DFD7;
    background-image:none;
    color: #c7b9b9;
    margin: 5px 0;
    font-size: 1.5em;
    border:none;

}

input[type="submit"].prominantButton-dis:hover {
    cursor:pointer;
}

input[type="submit"].prominantButton {
    background: #2c9cbb;
    background-image:none;
    font-weight: 600;
    font-family: "gloriola-web-1","gloriola-web-2";
    color: #FFF;
    margin: 5px 0;
    font-size: 1.5em;
    border:none;
}
input[type="submit"].prominantButton:hover {
     background: #1f6f85;
    background-image:none;

    border:none;
}

div.prominantButton {
     padding: 5px 10px;
    font-weight: 600;
    font-family: "gloriola-web-1","gloriola-web-2";
    font-size:18px;
    text-align:center;
    background: #2c9cbb;
    background-image:none;
    color: #FFF;
    margin: 5px 0;
    border:none;
}

div.prominantButton:hover {
    background-image:none;
     background: #1f6f85;
    border:none;


}

/**
Contests page
**/


.web-content h1 {
    margin:20px 0;
}

.web-content {
    margin-left:60px;
margin-right:60px;

}


.web-content  {
    font-size:1.2em;
}

.web-content .info-elt {
    margin-bottom:10px;
margin-top:15px;
padding:1px 30px 5px;
    background:#FFF;
}

.web-content .info-elt p {
    margin:10px;
}

.web-content .info-breakout-question {
    margin:0 auto;
    text-align:center;
    margin-top:15px;
    margin-bottom:15px;

    
}

.web-content .info-breakout-question h3 {
    font-size:1.4em;

    font-style:italic;
}

.web-content ul li {
   margin-left:2.0em; 
}

.about .centered {
    width:500px;
    margin: 0 auto;
}

.about .main-question {
    color:#E65608;
    font-family:"gloriola-web-1","gloriola-web-2";
    font-size:24px;
    font-style:normal;
    font-weight:400;
    margin:20px 0 10px;
}

.about .main-question h1 {
    font-size:32px;
}

.about .main-answer h3 {
    color:#E65608;
   font-weight:600;
    margin-top:25px
}

.about .info-title h3 {
    font-size:24px;
}

.about .response h2 {
    margin-top:35px;
}

.about .response {
    padding-left:40px;
}

/** facebook stuff on home page **/

.fan_box .full_widget .connect_top.clearfix {
    float:left;
    background-color: transparent;
}

.fan_box div.full_widget {
    border:none;
    background-color:#F5F5F5;
}

.fan_box div.full_widget .connections {
   border:none;
    min-height:0;
}

#message .fb_iframe_widget span {
    background-color:transparent;
    padding:0;
    height:auto;
}



/** CHANGES AFTER 2.11.2010 **/

.iceDatTbl.colab.prohome thead tr.voteForPlan { background:#f4f3eb;}

.protitle { margin:60px 0 19px 0;}
.protitle img { float:left; margin-right:15px;}
.protitle h2 { color:#2498b3; display:inline-block; margin-right:15px;}
.protitle h4 { color:#3f3f3f; margin:5px 0 0 0;}
#earth_pattern.proposals { height: 95px; }


input.selectbox { padding:0 44px 0 9px; width:100%; height:35px; display:block; background: url(../images/butt_arrowbdr.png) no-repeat right;	font-size:17px; font-style:italic; color:#666; border:none; cursor: pointer;}
input.selectbox span {font-size:13px; font-style:normal; font-weight:600; color:#e36f0f;}

.top_separator { margin: 0; padding: 0; height: 0px; }


#earth_pattern.proposals.planDetails { height:121px;}

#main {
    padding-top: 15px;
}

.mainTabs {
    width: 100%;
}


.odd .l { width:149px; font-size:12px; line-height:20px; background:url(../images/comment_arrow1.gif) no-repeat right 38px #e8e8dd; padding:15px 35px 30px 15px;}
    .wf-active .odd .l { width:149px; font-size:14px; line-height:20px; background:url(../images/comment_arrow1.gif) no-repeat right 38px #e8e8dd; padding:15px 35px 30px 15px;}
.odd .r { width:740px; font-size:14px; line-height:27px; background:#f3f3ed; padding:15px 30px 0 15px;}
    .wf-active .odd .r { width:740px; font-size:16px; line-height:27px; background:#f3f3ed; padding:15px 30px 0 15px;}
.even .l { width:149px; font-size:12px; line-height:20px; background:url(../images/comment_arrow2.gif) no-repeat right 38px #efeee7; padding:15px 35px 30px 15px;}
    .wf-active .even .l { width:149px; font-size:14px; line-height:20px; background:url(../images/comment_arrow2.gif) no-repeat right 38px #efeee7; padding:15px 35px 30px 15px;}
.even .r { width:740px; font-size:14px; line-height:27px; background:#fafaf8; padding:15px 30px 0 15px;}
    .wf-active .even .r { width:740px; font-size:16px; line-height:27px; background:#fafaf8; padding:15px 30px 0 15px;}
    
div#pager { float:right; width:320px; height:20px; text-align:right; padding-top:30px;}

#pager .controls.pagerNext {float: left; }
#pager .controls.pagerPrev {float: left; }

#pager .paginatorInfo {
    float: left;
}

#pager td.pagerNextScrBtn, 
#pager td.pagerNextScrCol,
#pager td.pagerNextCol {
    padding-right: 5px;
}

.colab td.name {
    width: 340px;
}
.wf-active #bread.contest,
#bread.contest { margin-top:25px; margin-bottom: 20px;}

.select-pro_wrap.floatRight {
    float: right;	
}

.viewAllProposals {
    font-weight: bold;
    margin: 5px 10px;
    font-size: 18px;
}

.wf-active #menu li a.facebook-link,
#menu li a.facebook-link {
    background: url(/collaboratorium-theme/images/facebook.gif) no-repeat 0% 50%;
    margin-left: 10px;
    padding-bottom: 2px;
    padding-left: 22px;
    padding-top: 6px;
}

#searchsubmit { width:32px; height:29px; text-align:center; vertical-align:middle; background:url(/collaboratorium-theme/images/header_btn-go.png) no-repeat; border:none; cursor:pointer;  font-size:14px; font-weight:600; color:#fff;}

#bread {
    font-size: 14px;
}

.wf-active div.q {
    height: auto;
}

.addcomment { font-size:14px; margin-top:25px;}
.addcomment #add { float:left; width:188px; padding:10px 0 0 6px;}
.addcomment strong { font-weight:600;}


.commentbox { height:178px; width:788px; border:2px solid #b7b6ae; margin-bottom:25px;}
input.comm_butt[type="submit"], 
input.comm_butt[type="submit"]:hover,
input.comm_butt[type="submit"]:focus
 { background: url(/collaboratorium-theme/images/comment_submit.gif); border:none; width:119px; height:30px; cursor:pointer;}
 
 .commentsActions {
    text-align: right;
 }
 
.colab.prohome th, .wf-active .colab.prohome th a {
    color: #484848;
}

.info a {
	color: #666;
} 

.acthead {
    background: url(/collaboratorium-theme/images/grid_act.gif);
}

.acthead .buttbdr {
    margin-bottom: 0;
    margin-right: 10px;
}

.acthead .buttDis,
.wf-active .acthead .buttDis a {
    background: #bbb;
}

h1 .page-actions, 
h1 .page-actions span,
.wf-active h1 .page-actions, 
.wf-active h1 .page-actions span,
.wf-active h1 .page-actions a,
.wf-active h1 .page-actions img {
    font-size: 12px;
    margin: 0;
    padding: 0;
}


#earth.home {
    margin-top: 0;
}

.wf-active .resources .icon,
.resources .icon {
	margin: 3px;
	padding: 0;
	width: auto;
	height: auto;
	display: inline;
	clear: inherit;
	float: none;
}


body .resources , .resources h2, .resources { font-family:"gloriola-web-2", Verdana, sans-serif; }
.resources h1 span {  font-family: "gloriola-display-thin-2", Verdana, sans-serif; }
}

.journal-content-article ul li {
    list-style: disc inside none;
}

